deploy/k8s/ragnabot.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ragnabot-web
  namespace: ragnabot
spec:
  progressDeadlineSeconds: 600
  replicas: 2
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: ragnabot-web
  strategy:
    rollingUpdate:
      maxSurge: 0
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      annotations:
        kubectl.kubernetes.io/restartedAt: '2026-08-28T23:25:03-03:00'
      labels:
        app: ragnabot-web
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: kubernetes.io/hostname
                operator: NotIn
                values:
                - rgtk8s003
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - podAffinityTerm:
              labelSelector:
                matchLabels:
                  app: ragnabot-web
              topologyKey: kubernetes.io/hostname
            weight: 100
          requiredDuringSchedulingIgnoredDuringExecution:
          - labelSelector:
              matchLabels:
                app: ragnabot-web
            topologyKey: kubernetes.io/hostname
      automountServiceAccountToken: false
      containers:
      - command:
        - bundle
        - exec
        - rails
        - s
        - -p
        - '3000'
        - -b
        - 0.0.0.0
        image: chatwoot/chatwoot@sha256:18f280a63070073c7588164eed31303cc788123d899733e54aeec4c39d1d8dd9
        imagePullPolicy: Always
        name: web
        ports:
        - containerPort: 3000
          protocol: TCP
        readinessProbe:
          failureThreshold: 12
          httpGet:
            path: /api
            port: 3000
            scheme: HTTP
          initialDelaySeconds: 20
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
        resources:
          limits:
            cpu: '3'
            memory: 2500Mi
          requests:
            cpu: 500m
            memory: 1Gi
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
            - ALL
          seccompProfile:
            type: RuntimeDefault
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /app/public/brand-assets/ragnabot-logo.svg
          name: branding
          subPath: ragnabot-logo.svg
        - mountPath: /app/public/brand-assets/ragnabot-logo-dark.svg
          name: branding
          subPath: ragnabot-logo-dark.svg
        - mountPath: /app/public/brand-assets/ragnabot-logo-thumb.svg
          name: branding
          subPath: ragnabot-logo-thumb.svg
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
      tolerations:
      - effect: NoExecute
        key: node.kubernetes.io/unreachable
        operator: Exists
        tolerationSeconds: 60
      - effect: NoExecute
        key: node.kubernetes.io/not-ready
        operator: Exists
        tolerationSeconds: 60
      volumes:
      - configMap:
          defaultMode: 420
          name: ragnabot-branding
        name: branding
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ragnabot-worker
  namespace: ragnabot
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: ragnabot-worker
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      annotations:
        kubectl.kubernetes.io/restartedAt: '2026-08-28T23:25:03-03:00'
      labels:
        app: ragnabot-worker
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: kubernetes.io/hostname
                operator: NotIn
                values:
                - rgtk8s003
      automountServiceAccountToken: false
      containers:
      - command:
        - bundle
        - exec
        - sidekiq
        - -C
        - config/sidekiq.yml
        image: chatwoot/chatwoot@sha256:18f280a63070073c7588164eed31303cc788123d899733e54aeec4c39d1d8dd9
        imagePullPolicy: Always
        name: worker
        resources:
          limits:
            memory: 2500Mi
          requests:
            cpu: 250m
            memory: 1Gi
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
            - ALL
          seccompProfile:
            type: RuntimeDefault
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
      tolerations:
      - effect: NoExecute
        key: node.kubernetes.io/unreachable
        operator: Exists
        tolerationSeconds: 60
      - effect: NoExecute
        key: node.kubernetes.io/not-ready
        operator: Exists
        tolerationSeconds: 60
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: banco-lider
  namespace: ragnabot
spec:
  progressDeadlineSeconds: 600
  replicas: 2
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: banco-lider
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: banco-lider
    spec:
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
          - labelSelector:
              matchLabels:
                app: banco-lider
            topologyKey: kubernetes.io/hostname
      containers:
      - image: haproxy:2.9-alpine
        imagePullPolicy: IfNotPresent
        name: haproxy
        ports:
        - containerPort: 5432
          protocol: TCP
        resources:
          limits:
            cpu: 200m
            memory: 128Mi
          requests:
            cpu: 20m
            memory: 32Mi
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /usr/local/etc/haproxy/haproxy.cfg
          name: conf
          subPath: haproxy.cfg
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
      volumes:
      - configMap:
          defaultMode: 420
          name: banco-lider-conf
        name: conf
---
apiVersion: v1
kind: Service
metadata:
  name: ragnabot-web
  namespace: ragnabot
spec:
  clusterIP: 10.100.119.175
  clusterIPs:
  - 10.100.119.175
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - port: 3000
    protocol: TCP
    targetPort: 3000
  selector:
    app: ragnabot-web
  sessionAffinity: None
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: banco-lider
  namespace: ragnabot
spec:
  clusterIP: 10.104.79.194
  clusterIPs:
  - 10.104.79.194
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - port: 5432
    protocol: TCP
    targetPort: 5432
  selector:
    app: banco-lider
  sessionAffinity: None
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: 50m
    nginx.ingress.kubernetes.io/proxy-read-timeout: '86400'
    nginx.ingress.kubernetes.io/proxy-send-timeout: '86400'
  name: ragnabot
  namespace: ragnabot
spec:
  ingressClassName: nginx
  rules:
  - host: chat002.ragnatela.com.br
    http:
      paths:
      - backend:
          service:
            name: ragnabot-web
            port:
              number: 3000
        path: /
        pathType: Prefix
  - host: bot.ragnatela.com.br
    http:
      paths:
      - backend:
          service:
            name: ragnabot-web
            port:
              number: 3000
        path: /
        pathType: Prefix
